# FEBio

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEBio.sln  FEBio2.sln  FEBioConfig.cmake  FindDependencies.cmake  LICENSE  Makefile  Makelibs.mk  Mkdir.bash  README  README.md  ROADMAP.md  docker-compose.yml  febio.mk  make.gcc  make.lnx32  make.lnx64  make.lnx64d  make.osx  make.osxd  plot_def_grad.asv  plot_def_grad.m  svnrev.bash  test.txt
Documentation/: #FEBio_um_3.0.lyx#  #FEBio_um_3.2.lyx#  Copyright-FEBio.txt  Doxyfile  Elements.pptx  FEBio 2.3. Release Notes.docx  FEBio.enl  FEBio2.bib  FEBio2.enl  FEBio3.bib  FEBioBinaryDatabaseSpecification.doc  FEBioBinaryDatabaseSpecification.docx  FEBio_EULA.rtf  FEBio_EULA.txt  FEBio_EULA_3.rtf  FEBio_EULA_3.txt  FEBio_EULA_4.txt  FEBio_Theory_Manual.lyx  FEBio_User_Manual.lyx  FEBio_dm.doc  FEBio_tm.doc  FEBio_tm_1.3.doc  FEBio_tm_1.4.doc  FEBio_tm_2.0.docx  FEBio_tm_2.1.docx  FEBio_tm_2.2.docx  FEBio_tm_2.4.docx  FEBio_tm_2.5.docx  FEBio_tm_2.7.lyx  FEBio_tm_2_6.lyx  FEBio_tm_2_7.lyx  FEBio_tm_3.0.lyx  FEBio_tm_3.2.lyx  FEBio_um.doc  FEBio_um_1.3.doc  FEBio_um_1.4.doc  FEBio_um_2.0.docx  FEBio_um_2.1.docx  FEBio_um_2.7.lyx  FEBio_um_2.8.lyx  (+15 more)
Documents/: FEBio_dm_2.0.docx
FEAMR/: CMakeLists.txt  FEAMR.cpp  FEAMR.h  FEDomainErrorCriterion.cpp  FEDomainErrorCriterion.h  FEDomainShapeInterpolator.cpp  FEDomainShapeInterpolator.h  FEElementDataCriterion.cpp  FEElementDataCriterion.h  FEElementSelectionCriterion.cpp  FEElementSelectionCriterion.h  FEErosionAdaptor.cpp  FEErosionAdaptor.h  FEFilterAdaptorCriterion.cpp  FEFilterAdaptorCriterion.h  FEHexRefine.cpp  FEHexRefine.h  FEHexRefine2D.cpp  FEHexRefine2D.h  FELeastSquaresInterpolator.cpp  FELeastSquaresInterpolator.h  FELeastSquaresMapper.cpp  FELeastSquaresMapper.h  FEMMGRemesh.cpp  FEMMGRemesh.h  FEMaxVariableCriterion.cpp  FEMaxVariableCriterion.h  FEMaxVolumeCriterion.cpp  FEMaxVolumeCriterion.h  FEMeshDataInterpolator.cpp  FEMeshDataInterpolator.h  FEMeshShapeInterpolator.cpp  FEMeshShapeInterpolator.h  FERefineMesh.cpp  FERefineMesh.h  FEScaleAdaptorCriterion.cpp  FEScaleAdaptorCriterion.h  FETestRefine.cpp  FETestRefine.h  FETetRefine.cpp  (+13 more)
FEBio/: Archive.cpp  Archive.h  BC.h  BFGSSolver.cpp  BFGSSolver.h  ClassDiagram3.cd  Command.h  CommandManager.h  DataStore.cpp  DataStore.h  DumpFile.cpp  DumpFile.h  FE2DFiberNeoHookean.cpp  FE2DFiberNeoHookean.h  FE2DTransIsoMooneyRivlin.cpp  FE2DTransIsoMooneyRivlin.h  FE2DTransIsoVerondaWestmann.cpp  FE2DTransIsoVerondaWestmann.h  FEAnalysis.cpp  FEAnalysis.h  FEArrudaBoyce.cpp  FEArrudaBoyce.h  FEAugLagLinearConstraint.cpp  FEAugLagLinearConstraint.h  FEBio.cpp  FEBio.vcproj  FEBioApp.cpp  FEBioApp.h  FEBioCommand.cpp  FEBioCommand.h  FEBioImport.cpp  FEBioImport.h  FEBioPlotFile.cpp  FEBioPlotFile.h  FEBioStdSolver.cpp  FEBioStdSolver.h  FEBiphasic.cpp  FEBiphasic.h  FEBiphasicDomain.h  FEBiphasicSolute.cpp  (+346 more)
FEBio2/: Command.h  CommandManager.h  DataStore.cpp  DataStore.h  ElementDataRecord.cpp  ElementDataRecord.h  FE2DFiberNeoHookean.cpp  FE2DFiberNeoHookean.h  FE2DTransIsoMooneyRivlin.cpp  FE2DTransIsoMooneyRivlin.h  FE2DTransIsoVerondaWestmann.cpp  FE2DTransIsoVerondaWestmann.h  FE3FieldElasticSolidDomain.h  FEAnalysis.cpp  FEAnalysis.h  FEAnalysisStep.cpp  FEAnalysisStep.h  FEArrudaBoyce.h  FEAugLagLinearConstraint.cpp  FEAugLagLinearConstraint.h  FEBio.cpp  FEBioCommand.cpp  FEBioCommand.h  FEBioImport.cpp  FEBioImport.h  FEBioPlotFile.cpp  FEBioPlotFile.h  FEBioProgress.cpp  FEBioProgress.h  FEBioStdSolver.cpp  FEBioStdSolver.h  FEBiphasic.cpp  FEBiphasic.h  FEBiphasicDomain.h  FEBiphasicSolidDomain.h  FEBiphasicSolute.cpp  FEBiphasicSolute.h  FEBiphasicSoluteDomain.h  FEBiphasicSoluteSolver.cpp  FEBiphasicSoluteSolver.h  (+275 more)
FEBio3/: Command.h  CommandManager.cpp  CommandManager.h  FEBio.cpp  FEBioApp.cpp  FEBioApp.h  FEBioCommand.cpp  FEBioCommand.h  FEBioStdSolver.cpp  FEBioStdSolver.h  Interrupt.cpp  Interrupt.h  breakpoint.cpp  breakpoint.h  cmdoptions.h  console.cpp  console.h  febio_cb.cpp  febio_cb.h  ping.cpp  ping.h  stdafx.cpp  stdafx.h
FEBioAPI/: FEBioApp.cpp  FEBioApp.h  FEBioCommand.cpp
FEBioERD/: FEBioERD.cpp  FEBioERD.h  FEBioERDPlot.cpp  FEBioERDPlot.h  FEChemicalReactionERD.cpp  FEChemicalReactionERD.h  FEConcentrationIndependentReactionERD.cpp  FEConcentrationIndependentReactionERD.h  FEERDDomainFactory.cpp  FEERDDomainFactory.h  FEERDModule.cpp  FEERDModule.h  FEElasticReactionDiffusion.h  FEElasticReactionDiffusionAnalysis.h  FEElasticReactionDiffusionDomain.h  FEElasticReactionDiffusionInterface.h  FEElasticReactionDiffusionSolidDomain.cpp  FEElasticReactionDiffusionSolidDomain.h  FEElasticReactionDiffusionSolver.cpp  FEElasticReactionDiffusionSolver.h  FEElasticReactionDiffusionStandard.cpp  FEElasticReactionDiffusionStandard.h  FEGrowthTensorERD.cpp  FEGrowthTensorERD.h  FEHillActivation.cpp  FEHillActivation.h  FEHillActivationANDActivation.cpp  FEHillActivationANDActivation.h  FEHillActivationANDInhibition.cpp  FEHillActivationANDInhibition.h  FEHillActivationORActivation.cpp  FEHillActivationORActivation.h  FEHillInhibition.cpp  FEHillInhibition.h  FEKinematicGrowthRateDependent.cpp  FEKinematicGrowthRateDependent.h  FEMassActionForwardERD.cpp  FEMassActionForwardERD.h  FEMassActionReversibleERD.cpp  FEMassActionReversibleERD.h  (+9 more)
FEBioFluid/: FEBackFlowBiphasicStabilization.cpp  FEBackFlowBiphasicStabilization.h  FEBackFlowFSIStabilization.cpp  FEBackFlowFSIStabilization.h  FEBackFlowResistance.cpp  FEBackFlowResistance.h  FEBackFlowStabilization.cpp  FEBackFlowStabilization.h  FEBackFlowVStabilization.cpp  FEBackFlowVStabilization.h  FEBinghamFluid.cpp  FEBinghamFluid.h  FEBioBiphasicFSI.cpp  FEBioBiphasicFSI.h  FEBioFSI.cpp  FEBioFSI.h  FEBioFluid.cpp  FEBioFluid.h  FEBioFluidData.cpp  FEBioFluidData.h  FEBioFluidP.cpp  FEBioFluidP.h  FEBioFluidPlot.cpp  FEBioFluidPlot.h  FEBioFluidSolutes.cpp  FEBioFluidSolutes.h  FEBioFluidV.cpp  FEBioFluidV.h  FEBioMultiphasicFSI.cpp  FEBioMultiphasicFSI.h  FEBioPolarFluid.cpp  FEBioPolarFluid.h  FEBiphasicFSI.cpp  (+350 more)
(+5570 files in other folders)
